Spek 0.5 - Released 2010-06-26
==============================

Spek is an acoustic spectrum analyser written in Vala.
It uses the GNOME platform: GLib, GTK+, Cairo and GStreamer.
Spek is available on GNU/Linux and Windows.

Find out more about Spek on its website: http://spek-project.org/

Version 0.5 brings the following features and fixes:

 * Speed up spectral analysis by using the optimal number of frequency bands.
 * DTS files support.
 * Distribute Windows version as a ZIP archive in addition to the MSI installer.
 * Mac OS X installer.
 * Use Pango to render text.
 * Brand new icon.