@@ -24,12 +24,12 @@ AM_PROG_VALAC([0.7.0])
 AC_PROG_INSTALL
 AC_PROG_INTLTOOL([0.35])
 
-pkg_modules="gtk+-2.0 >= 2.14.0 gstreamer-0.10 >= 0.10.17 libavformat libavcodec fftw3f"
+pkg_modules="gtk+-2.0 >= 2.14.0 libavformat libavcodec >= 52.23.0 fftw3f"
 PKG_CHECK_MODULES(SPEK, [$pkg_modules])
 AC_SUBST(SPEK_CFLAGS)
 AC_SUBST(SPEK_LIBS)
 
-SPEK_PACKAGES="--pkg gtk+-2.0 --pkg gstreamer-0.10"
+SPEK_PACKAGES="--pkg gtk+-2.0 --pkg posix"
 AC_SUBST(SPEK_PACKAGES)
 
 AC_CHECK_LIB(m, log10f)
